Added json resources link

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2131,21 +2131,23 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/ZYb_ZU8LNxs"
+                    >Asynchronous JavaScript full course. ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/Oive66jrwBs"
+                    >Fetch API introduction. ~ Travesty Media</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/mAqYJF-yxO8"
+                    >Up and running JSON server. Paert 1 ~ The Net Ninja</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/VF3TI4Pj_kM"
+                    >Up and running JSON server. Part 2 ~ The Net Ninja</a
                   >
                 </li>
               </ul>
@@ -2156,50 +2158,9 @@
               <h3 class="resource-card-title">Playlist</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9jx2TTZk3IGWKSbtugYdrlu"
+                    >Asynchronous JavaScript. ~ The Net Ninja</a
                   >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <!-- Paid Courses -->
-            <div class="resource-card">
-              <h3 class="resource-card-title">Paid Courses</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Udemy</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Coursera</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Skillshare</span>
                 </li>
               </ul>
             </div>
@@ -2209,71 +2170,8 @@
               <h3 class="resource-card-title">Articles</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <!-- documents -->
-            <div class="resource-card">
-              <h3 class="resource-card-title">Documents</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <!-- Practice Projects -->
-            <div class="resource-card">
-              <h3 class="resource-card-title">Practice Projects</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://blog.siddu.tech/secret-json-features"
+                    >5 Secret features of JSON you didn't know about. ~ Siddharth Shyniben</a
                   >
                 </li>
               </ul>
@@ -2285,25 +2183,10 @@
               <p class="resource-card-body">Tips, Tricks, Concepts, etc.</p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://jsonplaceholder.typicode.com/"
+                    >Free fake API for testing and prototyping.</a
                   >
-                  <span class="resource-link-badge">Video</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Article</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Document</span>
+                  <span class="resource-link-badge">Tool</span>
                 </li>
               </ul>
             </div>
