Added API and json links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2131,35 +2131,8 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/ZYb_ZU8LNxs"
-                    >Asynchronous JavaScript full course. ~ FreeCodeCamp</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/Oive66jrwBs"
-                    >Fetch API introduction. ~ Travesty Media</a
-                  >
-                </li>
-                <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/mAqYJF-yxO8"
-                    >Up and running JSON server. Paert 1 ~ The Net Ninja</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/VF3TI4Pj_kM"
-                    >Up and running JSON server. Part 2 ~ The Net Ninja</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <!-- Playlist -->
-            <div class="resource-card">
-              <h3 class="resource-card-title">Playlist</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9jx2TTZk3IGWKSbtugYdrlu"
-                    >Asynchronous JavaScript. ~ The Net Ninja</a
+                    >JSON tutorial for beginners. ~ Techcode</a
                   >
                 </li>
               </ul>
@@ -2183,10 +2156,10 @@
               <p class="resource-card-body">Tips, Tricks, Concepts, etc.</p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://jsonplaceholder.typicode.com/"
-                    >Free fake API for testing and prototyping.</a
+                  <a target="_blank" href=""
+                    ></a
                   >
-                  <span class="resource-link-badge">Tool</span>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
@@ -2213,21 +2186,23 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/ZYb_ZU8LNxs"
+                    >Asynchronous JavaScript full course. ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/Oive66jrwBs"
+                    >Fetch API introduction. ~ Travesty Media</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/mAqYJF-yxO8"
+                    >Up and running JSON server. Part 1 ~ The Net Ninja</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/VF3TI4Pj_kM"
+                    >Up and running JSON server. Part 2 ~ The Net Ninja</a
                   >
                 </li>
               </ul>
@@ -2238,6 +2213,11 @@
               <h3 class="resource-card-title">Playlist</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9jx2TTZk3IGWKSbtugYdrlu"
+                    >Asynchronous JavaScript. ~ The Net Ninja</a
+                  >
+                </li>
+                <li class="resource-link">
                   <a target="_blank" href="#"
                     >Link 1, ipsum dolor sit, amet consectetur adipisicing
                     elit.</a
@@ -2248,40 +2228,6 @@
                     >Link 2, ipsum dolor sit, amet consectetur adipisicing
                     elit.</a
                   >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <!-- Paid Courses -->
-            <div class="resource-card">
-              <h3 class="resource-card-title">Paid Courses</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Udemy</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Coursera</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Skillshare</span>
                 </li>
               </ul>
             </div>
@@ -2292,45 +2238,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-              </ul>
-            </div>
-
-            <!-- documents -->
-            <div class="resource-card">
-              <h3 class="resource-card-title">Documents</h3>
-              <ul class="resource-card-links">
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
                 </li>
               </ul>
@@ -2367,25 +2275,17 @@
               <p class="resource-card-body">Tips, Tricks, Concepts, etc.</p>
               <ul class="resource-card-links">
                 <li class="resource-link">
+                  <a target="_blank" href="https://jsonplaceholder.typicode.com/"
+                    >Free fake API for testing and prototyping.</a
+                  >
+                  <span class="resource-link-badge">Tool</span>
+                </li>
+                <li class="resource-link">
                   <a target="_blank" href="#"
                     >Link 1, ipsum dolor sit, amet consectetur adipisicing
                     elit.</a
                   >
                   <span class="resource-link-badge">Video</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Article</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Document</span>
                 </li>
               </ul>
             </div>
