Added more links to API and json sections.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2131,8 +2131,13 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/iiADhChRriM"
+                    >Learn JSON in 10 minutes. ~ Web Dev Simplified</a
+                  >
+                </li>
+                <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/mAqYJF-yxO8"
-                    >JSON tutorial for beginners. ~ Techcode</a
+                    >Full JSON tutorial for beginners. ~ Techcode</a
                   >
                 </li>
               </ul>
@@ -2217,18 +2222,6 @@
                     >Asynchronous JavaScript. ~ The Net Ninja</a
                   >
                 </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
               </ul>
             </div>
 
@@ -2249,21 +2242,18 @@
               <h3 class="resource-card-title">Practice Projects</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/opikz5x_1ak"
+                    >Build a food recipe app with fetch API and vanilla JavaScript. ~ GeetProbin.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/gIekxGDDD_A"
+                    >quiz app using Fetch API. ~ Code with Erum</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/GDa8kZLNhJ4"
+                    >Build and deploy 5 JavaScript and React API projects in 10 hours. ~ JavaScript Mastery</a
                   >
                 </li>
               </ul>
@@ -2281,9 +2271,8 @@
                   <span class="resource-link-badge">Tool</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4"
+                    >Make your own mock API. ~ Code with Abba Kubow</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
