Edited the recently added links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2248,7 +2248,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/gIekxGDDD_A"
-                    >quiz app using Fetch API. ~ Code with Erum</a
+                    >Quiz app using Fetch API. ~ Code with Erum</a
                   >
                 </li>
                 <li class="resource-link">
@@ -2269,6 +2269,18 @@
                     >Free fake API for testing and prototyping.</a
                   >
                   <span class="resource-link-badge">Tool</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4"
+                     >Create your own fake rest API with JSON server. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>"
+                    >Make your own mock API. ~ Code with Abba Kubow</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtu.be/FLnxgSZ0DG4"
