--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -222,7 +222,10 @@
 
           <div class="careers__cards">
             <!-- frontend card -->
-            <a href="../html/careers/frontend.html" class="careers__card-link">
+            <a
+              href="./html/careers/frontend.html"
+              class="careers__card-link pink"
+            >
               <div class="careers__card">
                 <h3>Frontend</h3>
                 <p>
@@ -231,7 +234,7 @@
               </div>
             </a>
             <!-- backend card -->
-            <a href="#" class="careers__card-link disabled">
+            <a href="#" class="careers__card-link green disabled">
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Backend</h3>
@@ -241,7 +244,7 @@
               </div>
             </a>
             <!-- android/mobile card -->
-            <a href="#" class="careers__card-link disabled">
+            <a href="#" class="careers__card-link red disabled">
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Android/Mobile</h3>
@@ -252,7 +255,7 @@
               </div>
             </a>
             <!-- uiux card  -->
-            <a href="#" class="careers__card-link disabled">
+            <a href="#" class="careers__card-link orange disabled">
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Ui/Ux Designer</h3>
@@ -260,7 +263,7 @@
               </div>
             </a>
             <!-- data analyst card -->
-            <a href="#" class="careers__card-link disabled">
+            <a href="#" class="careers__card-link purple disabled">
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Data Analyst</h3>
@@ -268,7 +271,7 @@
               </div>
             </a>
             <!-- product management card -->
-            <a href="#" class="careers__card-link disabled">
+            <a href="#" class="careers__card-link grey disabled">
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Technical Writing</h3>
@@ -337,8 +340,8 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links" href="../index.html">Tech Roadmap</a> is created by
-              <a class="paragraph-links" href="https://github.com/timonwa"
+              <a class="paragraph-links footer" href="../index.html">Tech Roadmap</a> is created by
+              <a class="paragraph-links footer" href="https://github.com/timonwa"
                 >Timonwa</a
               >
             </p>
