--- a/src/html/contribute.html
+++ b/src/html/contribute.html
@@ -270,8 +270,8 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links" href="../index.html">Tech Roadmap</a> is created by
-              <a class="paragraph-links" href="https://github.com/timonwa"
+              <a class="paragraph-links footer" href="../index.html">Tech Roadmap</a> is created by
+              <a class="paragraph-links footer" href="https://github.com/timonwa"
                 >Timonwa</a
               >
             </p>
