--- a/src/index.html
+++ b/src/index.html
@@ -297,7 +297,7 @@
               is created by
               <a
                 class="paragraph-links footer"
-                href="https://github.com/timonwa"
+                href="https://twitter.com/timonwa_"
                 >Timonwa</a
               >
             </p>
