added the first mvp, me.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -191,14 +191,14 @@
                     target="_blank"
                     href="https://blog.timonwa.com/you-dont-need-to-write-code-to-become-a-tech-sisbro"
                     >You don't need to write code to become a tech sis or tech
-                    bro.</a
+                    bro.  ~ Timonwa</a
                   >
                 </li>
                 <li class="resource-link">
                   <a
                     target="_blank"
                     href="https://skillcrush.com/blog/41-tech-job-titles/"
-                    >41 Job Titles in Tech. Which One Will be Yours?</a
+                    >41 Job Titles in Tech. Which One Will be Yours? ~ SkillCrush</a
                   >
                 </li>
               </ul>
@@ -293,6 +293,7 @@
               This project is OpenSource and is hosted on
               <a
                 class="paragraph-links"
+                target="_blank"
                 href="https://github.com/Timonwa/techroadmap"
                 >GitHub</a
               >. All meaningful contributions are welcome to help grow this
@@ -340,8 +341,8 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links footer" href="../index.html">Tech Roadmap</a> is created by
-              <a class="paragraph-links footer" href="https://twitter.com/timonwa_"
+              <a class="paragraph-links footer" target="_blank" href="../index.html">Tech Roadmap</a> is created by
+              <a class="paragraph-links footer" target="_blank" href="https://twitter.com/timonwa_"
                 >Timonwa</a
               >
             </p>
