--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -3451,6 +3451,7 @@
               This project is OpenSource and is hosted on
               <a
                 class="paragraph-links"
+                target="_blank"
                 href="https://github.com/Timonwa/techroadmap"
                 >GitHub</a
               >. All meaningful contributions are welcome to help grow this
@@ -3458,7 +3459,9 @@
             </p>
             <p>
               If you would like to contribute to this project, please visit our
-              <a class="paragraph-links" href="../../html/contribute.html"
+              <a
+                class="paragraph-links"
+                href="../html/contribute.html"
                 >contributors page</a
               >
               to find out how to contribute.
@@ -3479,20 +3482,14 @@
           <!-- footer nav links -->
           <div class="sections">
             <ul class="footer-links">
+              <li><a class="footer-link para-link" href="../index.html">Home</a></li>
               <li>
-                <a class="footer-link para-link" href="../../index.html"
-                  >Home</a
-                >
-              </li>
-              <li>
-                <a class="footer-link para-link" href="../../html/careers.html"
+                <a class="footer-link para-link" href="../html/careers.html"
                   >Careers</a
                 >
               </li>
               <li>
-                <a
-                  class="footer-link para-link"
-                  href="../../html/contribute.html"
+                <a class="footer-link para-link" href="../html/contribute.html"
                   >Contribute</a
                 >
               </li>
@@ -3502,13 +3499,8 @@
           <!-- attribution -->
           <div class="sections attribution">
             <p>
-              <a class="paragraph-links footer" href="../../index.html"
-                >Tech Roadmap</a
-              >
-              is created by
-              <a
-                class="paragraph-links footer"
-                href="https://twitter.com/timonwa_"
+              <a class="paragraph-links footer" target="_blank" href="../index.html">Tech Roadmap</a> is created by
+              <a class="paragraph-links footer" target="_blank" href="https://twitter.com/timonwa_"
                 >Timonwa</a
               >
             </p>
