updated and modified the links in frontend career  page.

--- a/src/html/careers.html
+++ b/src/html/careers.html
@@ -223,7 +223,7 @@
           <div class="careers__cards">
             <!-- frontend card -->
             <a
-              href="./html/careers/frontend.html"
+              href="../html/careers/frontend.html"
               class="careers__card-link pink"
             >
               <div class="careers__card">
