fixed nav link not linking to the correct pages.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2875,7 +2875,7 @@
             </p>
             <p>
               If you would like to contribute to this project, please visit our
-              <a class="paragraph-links" href="../html/contribute.html"
+              <a class="paragraph-links" href="../contribute.html"
                 >contributors page</a
               >
               to find out how to contribute.
@@ -2897,15 +2897,15 @@
           <div class="sections">
             <ul class="footer-links">
               <li>
-                <a class="footer-link para-link" href="../index.html">Home</a>
+                <a class="footer-link para-link" href="../../index.html">Home</a>
               </li>
               <li>
-                <a class="footer-link para-link" href="../html/careers.html"
+                <a class="footer-link para-link" href="../careers.html"
                   >Careers</a
                 >
               </li>
               <li>
-                <a class="footer-link para-link" href="../html/contribute.html"
+                <a class="footer-link para-link" href="../contribute.html"
                   >Contribute</a
                 >
               </li>
@@ -2917,8 +2917,7 @@
             <p>
               <a
                 class="paragraph-links footer"
-                target="_blank"
-                href="../index.html"
+                href="../../index.html"
                 >Tech Roadmap</a
               >
               is created by
