--- a/src/index.html
+++ b/src/index.html
@@ -254,7 +254,7 @@
             </p>
             <p>
               If you would like to contribute to this project, please visit our
-              <a class="paragraph-links" href="../html/contribute.html"
+              <a class="paragraph-links" href="./html/contribute.html"
                 >contributors page</a
               >
               to find out how to contribute.
@@ -276,15 +276,15 @@
           <div class="sections">
             <ul class="footer-links">
               <li>
-                <a class="footer-link para-link" href="../index.html">Home</a>
+                <a class="footer-link para-link" href="./index.html">Home</a>
               </li>
               <li>
-                <a class="footer-link para-link" href="../html/careers.html"
+                <a class="footer-link para-link" href="./html/careers.html"
                   >Careers</a
                 >
               </li>
               <li>
-                <a class="footer-link para-link" href="../html/contribute.html"
+                <a class="footer-link para-link" href="./html/contribute.html"
                   >Contribute</a
                 >
               </li>
@@ -296,8 +296,7 @@
             <p>
               <a
                 class="paragraph-links footer"
-                target="_blank"
-                href="../index.html"
+                href="./index.html"
                 >Tech Roadmap</a
               >
               is created by
