Added more links to different sections

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1548,6 +1548,13 @@
                     CBT</a
                   >
                 </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9g6m_6Sld9Q4jzqdqHd2HiD"
+                    >Regular expressions tutorial. ~ The Net Ninja</a
+                  >
+                </li>
               </ul>
             </div>
 
@@ -1621,6 +1628,19 @@
             <p>
               Note: You do not need to learn all of them, you just have to know
               atleast one CSS-only and one CSS-Js framework/library.
+            </p>
+            <p>
+              Before picking your first framework/library, check these videos out;
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/LimOOe6I4eo"
+                >What are frameworks and libraries. ~ Codeacademy</a
+              >
+              <a
+                class="resource-link paragraph-links"
+                href="https://youtu.be/N6SXu86bJ6I"
+                >Top CSS frameworks to check out in 2021. ~ Adrian Twarog</a
+              >
             </p>
           </div>
 
@@ -1957,8 +1977,14 @@
                   <span class="resource-link-badge">Link</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/_a5j7KoflTs"
-                    >Sass tutorial for beginners. ~ FreeCodeCamp</a
+                  <a target="_blank" href="https://youtu.be/nu5mdN2JIwM"
+                    >Sass crash course. ~ Travesty Media
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9jxJX7vojNVK-o8ubDZEcNb"
+                    > Complete Sass tutorial. ~ The Net Ninja
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
